# python-seedwork

./: .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml  security_advisory.yml
.github/workflows/: ci.yml  docs.yml  pre-release.yml  release.yml
0.4.0/: 404.html  index.html  sitemap.xml
0.4.0/architecture/: index.html
0.4.0/best-practices/: index.html
0.4.0/coding-standards/: index.html
0.4.0/component-reference/: index.html
0.4.0/examples/bank_account/: composition_root.py
0.4.0/getting-started/: index.html
0.4.0/javascripts/: mermaid.js
0.4.0/search/: search_index.json
docs/: README.md  architecture.md  best-practices.md  coding-standards.md  component-reference.md  getting-started.md  index.md
docs/examples/bank_account/: composition_root.py
examples/bank_account/domain/: bank_account.py  bank_account_repository.py  errors.py
src/seedwork/: __init__.py
src/seedwork/application/: __init__.py  background_tasks.py  base_integration_event.py  commands.py  domain_event_bus.py  domain_events.py  integration_events.py  outbox.py  queries.py  validation_errors.py
src/seedwork/domain/: __init__.py  aggregate_root.py  domain_error.py  domain_event.py  entity.py  repository.py  unit_of_work.py  value_object.py
src/seedwork/infrastructure/: __init__.py  command_bus_builder.py  deferred_domain_event_bus.py  domain_event_coordinator_command_bus.py  domain_event_flush_command_bus.py  domain_event_publishing_repository.py  in_memory_integration_event_publisher.py  in_memory_repository.py  in_memory_task_scheduler.py  integration_event_record.py  outbox.py  outbox_integration_event_publisher.py  (+6 more)
tests/application/: test_deposit_money_handler.py  test_get_balance_handler.py  test_open_account_handler.py  test_result.py  test_validation_errors.py
tests/domain/: test_aggregate_root.py  test_domain_error.py  test_domain_event.py  test_entity.py  test_value_object.py
tests/infrastructure/: test_bus_stack_composition.py  test_command_bus_builder.py  test_deferred_domain_event_bus.py  test_domain_event_coordinator_command_bus.py  test_domain_event_flush_command_bus.py  test_domain_event_publishing_repository.py  test_in_memory_integration_event_publisher.py  test_in_memory_outbox_repository.py  test_in_memory_repository.py  test_in_memory_task_queue.py  test_in_memory_task_scheduler.py  test_outbox.py  test_query_bus_builder.py  test_registry_command_bus.py  test_registry_query_bus.py  test_registry_task_bus.py  test_transactional_command_bus.py  test_validation_buses.py
(+48 files in other folders)
