[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-seedwork"
version = "0.1.0"
description = "DDD and Hexagonal Architecture building blocks for Python"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = []
authors = [{ name = "Alfonso Segura", email = "a.segura.gonzalez@gmail.com" }]
keywords = ["ddd", "domain-driven-design", "hexagonal-architecture", "cqrs", "clean-architecture"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/aseguragonzalez/python-seedwork"
Repository = "https://github.com/aseguragonzalez/python-seedwork"
Issues = "https://github.com/aseguragonzalez/python-seedwork/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/seedwork"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "pyright>=1.1",
    "build>=1.0",
    "hatch>=1.13",
    "python-semantic-release>=9.0",
    "pre-commit>=4.0",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
tag_format = "v{version}"
commit_message = "chore: release v{version} [skip ci]"
major_on_zero = false

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.publish]
upload_to_vcs_release = false  # artifacts are uploaded by the upload-to-gh-release step after uv build
upload_to_pypi = false  # publishing is handled by pypa/gh-action-pypi-publish via OIDC Trusted Publisher

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = [".", "docs/examples"]
addopts = "--cov=src/seedwork --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
source = ["src/seedwork"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "^\\s*\\.\\.\\.$",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]
ignore = ["ANN401"]  # Any is necessary at generic boundaries (e.g. _evolve **changes)

[tool.pyright]
pythonVersion = "3.12"
pythonPlatform = "All"
typeCheckingMode = "strict"
include = ["src", "tests", "docs/examples"]
extraPaths = ["docs/examples"]
venvPath = "."
venv = ".venv"
